load("@rules_java//java:java_library.bzl", "java_library")
load("@rules_java//java:java_test.bzl", "java_test")

java_library(
    name = "testlib",
    testonly = True,
    srcs = ["AbstractContainerTest.java"],
    visibility = ["//visibility:public"],
    deps = [
        "//israfil-micro-container",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
        "@maven//:org_microemu_cldcapi11",
    ],
)

java_test(
    name = "ContainerTest",
    srcs = ["ContainerTest.java"],
    deps = [
        ":testlib",
        "//israfil-micro-container",
        "//israfil-micro-util",
        "@maven//:com_google_truth_truth",
    ],
)

java_test(
    name = "LifecycleTest",
    srcs = ["LifecycleTest.java"],
    deps = [
        ":testlib",
        "//israfil-micro-container",
        "//israfil-micro-util",
        "@maven//:com_google_truth_truth",
    ],
)

java_test(
    name = "LegacyContainerTest",
    srcs = ["LegacyContainerTest.java"],
    deps = [
        ":testlib",
        "//israfil-micro-container",
        "//israfil-micro-util",
        "@maven//:com_google_truth_truth",
    ],
)

java_test(
    name = "DefaultContainerTest",
    srcs = ["DefaultContainerTest.java"],
    deps = [
        ":testlib",
        "//israfil-micro-container",
        "//israfil-micro-util",
    ],
)

java_test(
    name = "MultiThreadedAutoWiringContainerTest",
    srcs = ["MultiThreadedAutoWiringContainerTest.java"],
    deps = [
        ":testlib",
        "//israfil-micro-container",
        "//israfil-micro-util",
        "@maven//:com_google_truth_truth",
    ],
)
